[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/arm/player_arm_0.png" type="Texture" id=2]
[ext_resource path="res://assets/gunshot/gunshot_00.png" type="Texture" id=3]
[ext_resource path="res://assets/gunshot/gunshot_02.png" type="Texture" id=4]
[ext_resource path="res://assets/gunshot/gunshot_04.png" type="Texture" id=5]
[ext_resource path="res://assets/gunshot/gunshot_05.png" type="Texture" id=6]
[ext_resource path="res://assets/gunshot/gunshot_07.png" type="Texture" id=7]
[ext_resource path="res://assets/gunshot/gunshot_09.png" type="Texture" id=8]
[ext_resource path="res://assets/gunshot/gunshot_10.png" type="Texture" id=9]
[ext_resource path="res://assets/player/idle/player_idle_0.png" type="Texture" id=10]
[ext_resource path="res://assets/player/idle/player_idle_1.png" type="Texture" id=11]
[ext_resource path="res://assets/player/idle/player_idle_2.png" type="Texture" id=12]
[ext_resource path="res://assets/player/idle/player_idle_3.png" type="Texture" id=13]
[ext_resource path="res://assets/player/run/player_run_0.png" type="Texture" id=14]
[ext_resource path="res://assets/player/run/player_run_1.png" type="Texture" id=15]
[ext_resource path="res://assets/player/run/player_run_4.png" type="Texture" id=16]
[ext_resource path="res://assets/player/run/player_run_3.png" type="Texture" id=17]
[ext_resource path="res://assets/player/misc/mask.png" type="Texture" id=18]
[ext_resource path="res://scripts/camera_shake.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), null ],
"loop": false,
"name": "shoot",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 15.1911
height = 61.0146

[node name="Player" type="KinematicBody2D"]
position = Vector2( 96.5156, 88.1982 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
speed = 400
maskStandard = 0.2

[node name="ArmJoint" type="Position2D" parent="."]
position = Vector2( 16, -9 )

[node name="ArmSprite" type="AnimatedSprite" parent="ArmJoint"]
position = Vector2( 19, 2 )
frames = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="ArmJoint/ArmSprite"]
position = Vector2( 16.3752, -6.17307 )
enabled = true
cast_to = Vector2( 1080, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Gunshot" type="AnimatedSprite" parent="ArmJoint/ArmSprite"]
position = Vector2( 81.1124, -7.24768 )
rotation = 1.5708
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "shoot"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.97739, -0.711975 )
frames = SubResource( 3 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.10927, -1.93929 )
shape = SubResource( 4 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerLight" type="Light2D" parent="."]
texture = ExtResource( 18 )
texture_scale = 0.2
energy = 0.4
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 19 )
amplitude = 5.0
duration = 0.8
DAMP_EASING = 4.0

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="player_shot" from="." to="Camera2D" method="_on_Player_player_shot"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
